refact all the entity, security and config code